manifests/advanced/02-taint-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tolerant-demo
  namespace: demo-basic
spec:
  tolerations:
    - key: "demo"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
