manifests/advanced/01-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny 
  namespace: demo-basic
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
